--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Instagram bot",
   "main": "main.js",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "electron .",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
