--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"minLikes":"100","maxLikes":"250","minFollows":"100","maxFollows":"250","likeRate":"14","followRate":"","cooldown":"","likeToggle":false,"followToggle":true,"commentToggle":true,"pages":"yoooo","hashtags":"sdaasdasd","comments":"asdasdasda"}
+{"minLikes":"100","maxLikes":"250","minFollows":"100","maxFollows":"250","likeRate":"14","followRate":"15","cooldown":"25","likeToggle":true,"followToggle":true,"commentToggle":true,"pages":"yoooo","hashtags":"sdaasdasd","comments":"asdasdasda","path":"C:\\Users\\Chris Winterowd\\Downloads\\Baseball Lab.pdf"}
